2010-06-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Doxygen.in: Use @PERL@ instead of hard-coded /usr/bin/perl.

2010-06-14	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/rtems/mkrootfs.h,
	posix/include/rtems/posix/pthread.h,
	score/include/rtems/score/coresem.h,
	score/include/rtems/score/priority.h,
	score/include/rtems/score/threadq.h,
	score/include/rtems/score/timestamp.h: Move 'extern "C"'.
	* posix/include/rtems/posix/threadsup.h: Add extern "C".
	* libnetworking/netinet/in_pcb.c:
	Eliminate "ushort".
	* libfs/src/pipe/fifo.c, libfs/src/pipe/pipe.h:
	Eliminate "uint".

2010-06-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* include/rtems/tar.h, libcsupport/include/tar.h: Remove.
	* configure.ac: Require toolchain to provide tar.h.
	* libfs/src/imfs/imfs_load_tar.c, libmisc/untar/untar.h:
	Use <tar.h> instead of <rtems/tar.h>.

2010-06-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/rtems/libio.h: Fix typo in doxygen comment.

2010-06-12	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* libfs/src/pipe/fifo.c: Remove unused variable to fix warning.
	* libnetworking/rtems/mkrootfs.c: Add include to fix warning.
	* rtems/src/tasksetpriority.c: Fix spacing.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/inline/rtems/rtems/status.inl: Fix broken doxygen comment.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Doxygen.in: Activate INCLUDE_GRAPH and 
	INCLUDED_BY_GRAPH.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/include/rtems/score/timestamp.h,
	score/include/rtems/score/timestamp64.h,
	score/include/rtems/score/watchdog.h:
	Misc. doxygen fixes.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/devctl.h: Move mal-placed @file.

2010-06-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/devfs/devfs.h, libfs/src/rfs/rtems-rfs-block-pos.h,
	libfs/src/rfs/rtems-rfs-block.h, libfs/src/rfs/rtems-rfs-dir.h,